Hero text overflow fix

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -101,6 +101,7 @@ img {
   }
 } 
 
+
 main {
   font-size: 130%;
   font-weight: bolder;
@@ -444,6 +445,7 @@ input[data-error]::after {
   text-align: left;
   min-width: 424px;
 }
+
 .hero-content::after {
   content: "";
   width: 100%;
@@ -458,7 +460,7 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
-  font-size: 6rem;
+  font-size: 4.7rem;
   font-weight: normal;
   white-space: nowrap;
 }
@@ -509,6 +511,8 @@ footer {
     background: #fff;
     color: #000;
     padding: 20px;
+    /* to prevent overflow */
+    min-width: 0;
   }
   .hero-content::after {
     content: unset;
@@ -517,8 +521,9 @@ footer {
     display: none;
   }
   .hero-headline {
-    font-size: 4.5rem;
     white-space: normal;
+    /* to prevent overflow */
+    font-size: 3.5rem;
   }
   .hero-text {
     width: unset;
